<resources>
    <string name="app_name">ZotDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">prompt password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">shorter signin</string>
    <string name="title_activity_login">Zotero Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="action_test_webdav">Test WebDav Connection</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="title_activity_main">ZotDroid</string>
    <string name="xlistview_header_hint_normal">Scrolling up does nothing yet.</string>
    <string name="xlistview_header_hint_ready">Still not doing anything.</string>
    <string name="xlistview_header_hint_loading">Nope!</string>
    <string name="xlistview_header_last_time">...</string>
    <string name="xlistview_footer_hint_normal">Scroll down to load more items.</string>
    <string name="xlistview_footer_hint_ready">Release to load more.</string>
    <string name="crash_toast_text">sending crash report</string>
    <string name="test_webdav_settings">Test Personal WebDav</string>
    <string name="reset_and_sync">Reset and Sync</string>
    <string name="zotdroid_dismiss">Dismiss</string>
    <string name="zotdroid_local">Local</string>
    <string name="preferences_autofill">This preference will be automatically filled upon login.</string>
    <string name="intro_help_text">You have no items in your local library. To sync with your Zotero Library select
        \'sync zotero library\' or \'reset and sync\' from the options menu at the top right of the application.\n\n
    You will be prompted to launch your web-browser to authorize this application. Follow the prompts on screen.\n\n
    When you return to the application select \'sync zotero library \' or \'reset and sync\' again and your library will start to
    sync.\n\n
        Once you have synced, you can select a particular collection using the left-hand drawer. Click on \'ALL\' to open a particular
        collection. Group collections are also shown here.
    </string>
    <string name="main_menu_sync">Sync with Zotero</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_order_basic">Order by date modified</string>
    <string name="main_menu_order_author">Order by author name</string>
    <string name="main_menu_order_title">Order by title</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_about">About</string>
    <string name="low_free_space_title">Not enough free space</string>
    <string name="low_free_space_message">Sync has been cancelled. There isn\'t enough freespace to save your zotero library to
        the current database location. Please change the path in settings.</string>
    <string name="moving_database_message">You will need to close and restart ZotDroid for this change to take effect. Once restarted you will need to resync.</string>
    <string name="moving_database_title">Changed Database location.</string>
    <string name="https_warning_message">Make sure that your webdav URL starts with https and not http. Unsecured connections are not supported.</string>
    <string name="testing_webdav_local_title">Cannot test webdav connection.</string>
    <string name="testing_webdav_local_message">This option is for custom webdav servers only.</string>
    <string name="error_zotero_grab">Error grabbing items from Zotero.</string>
    <string name="sync_completed">Sync completed.</string>
    <string name="collections_upto_date">Collections are up-to-date.</string>
    <string name="error_parsing_JSON">Error in parsing JSON Object.</string>
    <string name="error_no_last_modified">No Last-Modified-Version in request.</string>
    <string name="error_parsing_items_object">Error in parsing items Object.</string>
    <string name="error_parsing_collections_object">Error in parsing Collections Object.</string>
    <string name="new_items_to_delete">New items to delete.</string>
    <string name="webdav_all_download_complete">Downloading all attachments has completed.</string>
    <string name="main_menu_download_all">Download all attachments.</string>
    <string name="error_item_sync">Some items did not sync correctly.</string>
    <string name="error_zotero_push">Failure in pushing items to Zotero.</string>
    <string name="error_version_grab">Version grab for items failed.</string>
    <string name="version_grab_complete">Version grab complete.</string>
    <string name="new_collections_check">New collections to check.</string>
    <string name="new_items_check">New items to check.</string>
    <string name="back_button">BACK</string>
    <string name="webdav_malformed_address">Malformed address. Check your WebDav Server setting.</string>
    <string name="error_failed_read">Failed to read. Check username / password and that the URL is correct.</string>
    <string name="error_malformed">Malformed URL. </string>
    <string name="error_webdav_download">WebDav download error. </string>
    <string name="error_check_webdav">Check username / password and that the URL is correct in the webdav settings.</string>
    <string name="error_writing_location">Problem writing to location. Check your downloads directory setting in webdav settings.</string>
    <string name="error_file_not_found">File not found.</string>
    <string name="error_net_connection">Problem with net connection.</string>
    <string name="settings_username_title">Username change.</string>
    <string name="zotero_address_warning_message">Make sure your webdav address ends with \'/zotero\'.</string>
    <string name="error_webdav_notfound">Could not find file to download. Please check your webdav settings and make sure the download directory exists.</string>
    <string name="settings_username_message">You have changed your username. Perform a reset-and-sync to change accounts.</string>
    <string name="error_not_on_server">File appears not to be on the remote server. Check your webdav settings.</string>
    <string name="error_zotero_webdav">Failed to download from Zotero. Check internet settings, webdav settings and firewalls.</string>
    <string name="request_write_permission">Write permission is required to create an attachments download directory.\nNot allowing this may cause problems reading attachments.</string>
    <string name="settings_download_location">The download directory specified cannot be used.</string>
    <string name="settings_download_message">The following directory either doesn\'t exist, isn\'t mounted or cannot have the correct permissions set:</string>
    <string name="permissions_not_granted">Permissions not granted.</string>
    <string name="permissions_not_granted_message">Permissions have not been granted to ZotDroid. Downloading attachments will not be available.</string>
    <string name="upgrade_subtext">The Zotdroid database has been changed as part of a process to bring in new features. Zotdroid must recheck all the items in your libraries. Please wait till the process completes and do not turn off your device or close Zotdroid.</string>
    <string name="upgrade_title">Upgrade</string>
    <string name="about_text">ZotDroid v1.2.3 © Benjamin Blundell 2018.\n A Zotero Client for Android.\nhttp://zotdroid.benjamin.computer\nhttp://www.zotero.org.</string>
    <string name="about_button">Thanks!</string>
    <string name="help_text">Help is available online at\nhttps://zotero.benjamin.computer.\nZotDroid will load this page in your browser.</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
</resources>